Removed usage of openrc, hence script for mariadb has no more while loops

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,14 +1,14 @@
 FROM alpine:3.19
 
-RUN apk update && apk add mariadb mariadb-client openrc
-RUN openrc
-RUN touch /run/openrc/softlevel
+RUN apk update && \
+	apk add mariadb mariadb-client openrc
+RUN mkdir -p /var/lib/mysql /var/run/mysqld && \
+    chown -R mysql:mysql /var/lib/mysql /var/run/mysqld
 
 COPY ./conf/mariadb.cnf /etc/my.cnf.d/my.cnf
+RUN mariadb-install-db
 COPY ./tools/startup.sh /usr/local/bin/
-
 RUN chmod +x /usr/local/bin/startup.sh
-RUN etc/init.d/mariadb setup
 
 EXPOSE 3306
 CMD [ "startup.sh" ]
