--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.19
 
 RUN apk update && \
-	apk add mariadb mariadb-client openrc
+	apk add mariadb mariadb-client
 RUN mkdir -p /var/lib/mysql /var/run/mysqld && \
     chown -R mysql:mysql /var/lib/mysql /var/run/mysqld
 
