--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -23,18 +23,18 @@ http {
 		ssl_protocols TLSv1.3; # Enable only TLS v1.3 for security
 
 		# Root, index and server settings
-		root /var/www; 
-		index index.php index.html; # Default index files
+		root /var/www/wordpress; 
+		index index.php; # Default index files
 		server_name localhost;
 
 		# PHP processing via FastCGI
-        # location ~ \.php$ {
-        #     include fastcgi_params;  # Include FastCGI parameters
-        #     fastcgi_split_path_info ^(.+\.php)(/.+)$;  # Split the path info
-        #     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;  # Set the script filename
-        #     fastcgi_param PATH_INFO $fastcgi_path_info;  # Set the path info
-        #     fastcgi_index index.php;  # Default file for FastCGI
-        #     fastcgi_pass wordpress:9000;  # Pass PHP requests to the FastCGI server on port 9000
-        # }
+        location ~ \.php$ {
+            include fastcgi_params;  # Include FastCGI parameters
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;  # Split the path info
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;  # Set the script filename
+            fastcgi_param PATH_INFO $fastcgi_path_info;  # Set the path info
+            fastcgi_index index.php;  # Default file for FastCGI
+            fastcgi_pass wordpress:9000;  # Pass PHP requests to the FastCGI server on port 9000
+        }
 	}
 }
