--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -6,6 +6,6 @@ RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
     -out /etc/ssl/certs/nginx-selfsigned.crt \
     -subj "/C=DE/ST=Baden Wurttemberg/L=Heilbronn/O=42 Heilbronn/OU=CoreCurriculum students/CN=hkumbhan"
 COPY ./conf/nginx.conf /etc/nginx/
-COPY ./conf/index.html /var/www/
+# COPY ./conf/index.html /var/www/
 EXPOSE 443
 ENTRYPOINT [ "nginx", "-g", "daemon off;" ]
