--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -11,8 +11,13 @@ http {
 	include /etc/nginx/mime.types;
 	default_type application/octet-stream;  # Default MIME type
 
-	# Server configuration for HTTPS
+	server {
+    	listen 80;
+    	server_name _;
+    	return 301 https://$host$request_uri;
+	}
 
+	# Server configuration for HTTPS
 	server {
 		listen 443 ssl http2; # Listen on port 443
 		listen [::]:443 ssl http2; #Listen on IPv6 address and port 443
