--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     container_name: mariadb
     build: ./requirements/mariadb/
     image: mariadb
+    ports:
+      - 3306:3306
     env_file:
       - .env
     networks:
