--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -15,6 +15,11 @@ services:
       wordpress:
         condition: service_healthy
     restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-kf", "https://localhost/"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
 
   mariadb:
     container_name: mariadb
@@ -32,7 +37,7 @@ services:
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 5s
-      timeout: 5s
+      timeout: 3s
       retries: 5
     
   wordpress:
@@ -51,8 +56,8 @@ services:
     restart: always
     healthcheck:
       test: ["CMD", "wp", "core", "is-installed"]
-      interval: 2s
-      timeout: 5s
+      interval: 5s
+      timeout: 3s
       retries: 5
 
 volumes:
