[changed]: removed http redirection to https and removed path to socket from mariadb confg since there was no local service running, just bind-address and skip networking was enough

--- a/srcs/requirements/mariadb/conf/mariadb.cnf
+++ b/srcs/requirements/mariadb/conf/mariadb.cnf
@@ -3,7 +3,7 @@
 user					= mysql
 port					= 3306
 bind-address			= 0.0.0.0
-socket  				= /var/run/mysqld/mysqld.sock
+# socket  				= /var/run/mysqld/mysqld.sock
 
 # Directories and files
 datadir					= /var/lib/mysql
