--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -11,11 +11,11 @@ http {
 	include /etc/nginx/mime.types;
 	default_type application/octet-stream;  # Default MIME type
 
-	server {
-    	listen 80;
-    	server_name _;
-    	return 301 https://$host$request_uri;
-	}
+	# server {
+    # 	listen 80;
+    # 	server_name _;
+    # 	return 301 https://$host$request_uri;
+	# }
 
 	# Server configuration for HTTPS
 	server {
