--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -30,7 +30,7 @@ http {
 		# Root, index and server settings
 		root /var/www/wordpress; 
 		index index.php; # Default index files
-		server_name localhost;
+		server_name hkumbhan.42.fr;
 
 		# PHP processing via FastCGI
         location ~ \.php$ {
